--- a/GUIClient/mainwindow.ui
+++ b/GUIClient/mainwindow.ui
@@ -16,7 +16,7 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="2">
-     <layout class="QVBoxLayout" name="verticalLayout_4" stretch="0,1,0,0">
+     <layout class="QVBoxLayout" name="verticalLayout_4" stretch="0,1,0">
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_4">
         <item>
@@ -50,35 +50,35 @@
            <widget class="QComboBox" name="comboBox_operator"/>
           </item>
           <item>
-           <widget class="QPushButton" name="pushButton">
+           <widget class="QPushButton" name="pushButton_add">
             <property name="text">
              <string>+</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="pushButton_2">
+           <widget class="QPushButton" name="pushButton_subtract">
             <property name="text">
              <string>-</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="pushButton_3">
+           <widget class="QPushButton" name="pushButton_multiply">
             <property name="text">
              <string>×</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="pushButton_4">
+           <widget class="QPushButton" name="pushButton_divide">
             <property name="text">
              <string>÷</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="pushButton_5">
+           <widget class="QPushButton" name="pushButton_Calculate">
             <property name="text">
              <string>=</string>
             </property>
@@ -95,13 +95,6 @@
        <widget class="QLabel" name="label">
         <property name="text">
          <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pushButton_Calculate">
-        <property name="text">
-         <string>Calculate</string>
         </property>
        </widget>
       </item>
