--- a/GUIClient/mainwindow.ui
+++ b/GUIClient/mainwindow.ui
@@ -18,7 +18,7 @@
     <item row="0" column="2">
      <layout class="QVBoxLayout" name="verticalLayout_4" stretch="0,1,0">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_4">
+       <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="4,2,2">
         <item>
          <widget class="QComboBox" name="comboBox_Serial">
           <property name="currentText">
@@ -30,6 +30,22 @@
          <widget class="QPushButton" name="pushButton_Connect">
           <property name="text">
            <string>Connect</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_Status">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </item>
