--- a/GUIClient/mainwindow.ui
+++ b/GUIClient/mainwindow.ui
@@ -67,12 +67,18 @@
             <property name="text">
              <string>+</string>
             </property>
+            <property name="checkable">
+             <bool>true</bool>
+            </property>
            </widget>
           </item>
           <item>
            <widget class="QPushButton" name="pushButton_subtract">
             <property name="text">
              <string>-</string>
+            </property>
+            <property name="checkable">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -81,6 +87,9 @@
             <property name="text">
              <string>×</string>
             </property>
+            <property name="checkable">
+             <bool>true</bool>
+            </property>
            </widget>
           </item>
           <item>
@@ -88,12 +97,18 @@
             <property name="text">
              <string>÷</string>
             </property>
+            <property name="checkable">
+             <bool>true</bool>
+            </property>
            </widget>
           </item>
           <item>
            <widget class="QPushButton" name="pushButton_Calculate">
             <property name="text">
              <string>=</string>
+            </property>
+            <property name="checkable">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
