--- a/GUIClient/mainwindow.ui
+++ b/GUIClient/mainwindow.ui
@@ -108,7 +108,7 @@
              <string>=</string>
             </property>
             <property name="checkable">
-             <bool>true</bool>
+             <bool>false</bool>
             </property>
            </widget>
           </item>
