--- a/GUIClient/mainwindow.ui
+++ b/GUIClient/mainwindow.ui
@@ -16,7 +16,7 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="2">
-     <layout class="QVBoxLayout" name="verticalLayout_4" stretch="0,1">
+     <layout class="QVBoxLayout" name="verticalLayout_4" stretch="0,2,1">
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="4,2,2">
         <item>
@@ -52,7 +52,7 @@
        </layout>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_9">
+       <layout class="QHBoxLayout" name="horizontalLayout_9" stretch="3,1,3">
         <item>
          <widget class="QLineEdit" name="lineEdit_LeftOperand">
           <property name="inputMask">
@@ -64,6 +64,12 @@
          <layout class="QVBoxLayout" name="verticalLayout_5">
           <item>
            <widget class="QPushButton" name="pushButton_add">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="text">
              <string>+</string>
             </property>
@@ -74,6 +80,12 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButton_subtract">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="text">
              <string>-</string>
             </property>
@@ -84,6 +96,12 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButton_multiply">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="text">
              <string>×</string>
             </property>
@@ -94,6 +112,12 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButton_divide">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="text">
              <string>÷</string>
             </property>
@@ -104,6 +128,12 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButton_Calculate">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="text">
              <string>=</string>
             </property>
@@ -119,26 +149,26 @@
         </item>
        </layout>
       </item>
-     </layout>
-    </item>
-    <item row="1" column="2">
-     <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QLabel" name="resulttextlabel">
-        <property name="text">
-         <string>Result:</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="resultlabel">
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="QLabel" name="resulttextlabel">
+          <property name="text">
+           <string>Result:</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="resultlabel">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </item>
