--- a/GUIClient/mainwindow.ui
+++ b/GUIClient/mainwindow.ui
@@ -70,6 +70,12 @@
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="font">
+             <font>
+              <pointsize>18</pointsize>
+              <bold>false</bold>
+             </font>
+            </property>
             <property name="text">
              <string>+</string>
             </property>
@@ -85,6 +91,12 @@
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
+            </property>
+            <property name="font">
+             <font>
+              <pointsize>18</pointsize>
+              <bold>false</bold>
+             </font>
             </property>
             <property name="text">
              <string>-</string>
@@ -102,6 +114,12 @@
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="font">
+             <font>
+              <pointsize>18</pointsize>
+              <bold>false</bold>
+             </font>
+            </property>
             <property name="text">
              <string>×</string>
             </property>
@@ -118,6 +136,12 @@
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="font">
+             <font>
+              <pointsize>18</pointsize>
+              <bold>false</bold>
+             </font>
+            </property>
             <property name="text">
              <string>÷</string>
             </property>
@@ -133,6 +157,12 @@
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
+            </property>
+            <property name="font">
+             <font>
+              <pointsize>18</pointsize>
+              <bold>false</bold>
+             </font>
             </property>
             <property name="text">
              <string>=</string>
@@ -153,6 +183,11 @@
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QLabel" name="resulttextlabel">
+          <property name="font">
+           <font>
+            <pointsize>18</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>Result:</string>
           </property>
@@ -163,6 +198,11 @@
         </item>
         <item>
          <widget class="QLabel" name="resultlabel">
+          <property name="font">
+           <font>
+            <pointsize>18</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string/>
           </property>
